--- a/README
+++ b/README
@@ -1,1 +1,19 @@
 == Welcome to TimeFlux
+
+Install (short):
+
+0. Intall ruby and rails
+
+1. Pull the code from git
+
+2. Install missing gems
+
+3. Run rake db:reset
+
+4. Run ruby script/server
+
+
+The seeded data contains two users:
+
+user=admin, password=admin
+user=user, password=user
